# pcie_debug_agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_FIXES_APPLIED.md  DEPENDENCIES_V3.md  DEPLOYMENT_SUMMARY.md  Dockerfile  HYBRID_LLM_TEST_RESULTS.md  HYBRID_QUICK_START.md  LOCAL_MODEL_SETUP.md  OPENAI_EMBEDDINGS_STATUS.md  OPENAI_SETUP_GUIDE.md  PRODUCTION_CHECKLIST.md  README.md  RUN_SIMULATION_GUIDE.md  SLASH_COMMANDS_DEMO.md  SMART_RAG_INTEGRATION.md  STRUCTURED_OUTPUT_GUIDE.md  TESTING_GUIDE.md  USAGE_GUIDE.md  add_smart_rag_command.py  app.py  auto_evolving_rag.py  auto_rag_system.py  automated_rag_test_suite.py  benchmark_performance.py  benchmark_results.db  best_config.json  chat_demo.py  check_env.py  comprehensive_pcie_qa_99.json  comprehensive_pcie_qa_99.py  context_rag_interface.py  debug_classifier.py  debug_rag_v3.py  demo_llm_functionality.py  deploy_enhanced_rag.py  deploy_unified_rag.py  (+62 more)
.github/workflows/: deploy.yml  test.yml
auto_rag_v2/: pyproject.toml
configs/: settings.yaml
docker/: README.md
docs/: INCREMENTAL_RAG_GUIDE.md  INCREMENTAL_RAG_QUICKSTART.md  RAG_ENHANCEMENT_PLAN.md  README.md
docs/incremental_rag/: README.md  implementation_example.py
examples/: hybrid_search_demo.py
src/: main.py
src/cli/: __init__.py  enhanced_interactive.py  interactive.py  main.py  main_enhanced.py  main_hybrid.py  memory.py  session_manager.py
src/collectors/: log_collector.py
src/config/: rag_v3_config.py  (+1 more)
templates/: report.html.jinja2  report.markdown.jinja2
tests/: README.md  __init__.py  conftest.py
(+132 files in other folders)
