[tool.poetry]
name = "auto-rag"
version = "0.1.0"
description = "Self-Evolving Context System for PCIe-Spec RAG"
authors = ["AutoRAG-Agent <autorag@pcie.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.2.0"
sentence-transformers = "^2.2.0"
faiss-cpu = "^1.7.0"
PyMuPDF = "^1.23.0"
optuna = "^3.0.0"
tqdm = "^4.64.0"
pydantic = "^1.8.0"
python-dotenv = "^0.19.0"
pyyaml = "^6.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^5.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
auto-rag = "auto_rag.main:main"